--- a/company/package.json
+++ b/company/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-and-deploy": "npm run build && git checkout -b build-branch && rm -rf dist && git add dist && git commit -m 'add dist folder' && git push origin build-branch"
   },
   "dependencies": {
     "lucide-react": "^0.453.0",
